--- a/Positons/Positons/positions.html
+++ b/Positons/Positons/positions.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>IJSE</title>
+    <title>Positions</title>
     <link href="assests/css/normalize.css" rel="stylesheet">
     <style>
         body>nav {
@@ -166,6 +166,15 @@
         <div></div>
         <div></div>
     </section>
+    <script>
+        setTimeout(function(){
+            if (confirm("Here the gitHub code!")) {
+            window.open(href='https://github.com/UshanGallage99/CSS-Sticky-Layout.git','_blank');
+            } else {
+            }
+            },2000);
+        
+    </script>
 </nav>
 
 </body>
